# depthslam_loopclosure

./: CMakeLists.txt  README.md  package.xml
.kdev4/: IRON_loopclosure.kdev4
config/mapfiles/.svn/: entries
config/mapfiles/.svn/text-base/: level2.yaml.svn-base
include/: IRON.h  IRONmap.h  KNNAdapter.h  KeyframeDatabase.h  LoopClosure.h  Matrixtransform.h  NDTLite.h  TransformCalculation.h  _nanoflann.hpp  depth_map.h
launch/: depthmap_record.launch  directslam.rviz  ironmap.launch  ironmap_zonghe.launch  ironmapceshi.launch  level2_twostage.launch  rangeflow_iron.launch  rangeflow_test3.launch  vins_rviz_config.rviz  vio_depth.launch  vio_depth_readbagfile.launch  vio_depth_realsense.launch
launch/.svn/: entries
launch/.svn/text-base/: depthonly_fr1_desk.launch.svn-base  depthonly_nsh.launch.svn-base  depthonly_onboard.launch.svn-base  depthonly_test22.launch.svn-base  freiburg.vcg.svn-base  ship_icp.vcg.svn-base  ship_kinect_icp.launch.svn-base
src/: IRONmap.cpp  KeyframeDatabase.cpp  LoopClosure.cpp  Matrixtransform.cpp  TransformCalculation.cpp
